VLD-28 handle httpStatus